--- a/composer.json
+++ b/composer.json
@@ -57,7 +57,8 @@
         "composer/composer": "1.0.0-alpha8",
         "luxifer/doctrine-functions": "dev-master",
         "nesbot/Carbon": "1.8.*",
-        "akeneo/batch-bundle": "0.1.2"
+        "akeneo/batch-bundle": "0.1.2",
+        "monolog/monolog": "1.7.*"
     },
     "scripts": {
         "post-install-cmd": [
