--- a/app/phpunit.xml.dist
+++ b/app/phpunit.xml.dist
@@ -19,12 +19,14 @@
 
     <testsuites>
         <testsuite name="Project Test Suite">
+            <directory suffix="Test.php">../src/*/src/*/Component/*/Tests/Unit</directory>
             <directory suffix="Test.php">../src/*/src/*/Bundle/*Bundle/Tests/Unit</directory>
             <directory suffix="Test.php">../src/*/src/*/Bundle/*Bundle/Tests/Functional</directory>
             <directory suffix="Test.php">../src/*/Bundle/*Bundle/Tests/Unit</directory>
             <directory suffix="Test.php">../src/*/Bundle/*Bundle/Tests/Functional</directory>
         </testsuite>
         <testsuite name="Project Unit Tests">
+            <directory suffix="Test.php">../src/*/src/*/Component/*/Tests/Unit</directory>
             <directory suffix="Test.php">../src/*/src/*/Bundle/*Bundle/Tests/Unit</directory>
             <directory suffix="Test.php">../src/*/Bundle/*Bundle/Tests/Unit</directory>
         </testsuite>
