--- a/app/phpunit.xml.dist
+++ b/app/phpunit.xml.dist
@@ -77,6 +77,8 @@
             <exclude>
                 <directory>../vendor</directory>
                 <directory>../src/*/tests</directory>
+                <directory>../src/*/Component/*/Tests</directory>
+                <directory>../src/*/src/*/Component/*/Tests</directory>
                 <directory>../src/*/src/*/Bundle/TestFrameworkBundle</directory>
                 <directory>../src/*/Bundle/*Bundle/DataFixtures</directory>
                 <directory>../src/*/Bundle/*Bundle/Resources</directory>
