--- a/composer.json
+++ b/composer.json
@@ -1,13 +1,10 @@
 {
-    "name": "oro/crm-dev",
-    "description": "The \"OroCRM Development Edition\" distribution",
+    "name": "oro/platform-dev",
+    "description": "The \"BAP Development Edition\" distribution",
     "autoload": {
         "psr-0": {
             "Oro\\Component": "src/Oro/src",
             "Oro\\Bundle": "src/Oro/src",
-            "OroPro\\Bundle": "src/OroPro/src",
-            "OroCRM\\Bundle": "src/OroCRM/src",
-            "OroCRMPro\\Bundle": "src/OroCRMPro/src",
             "": "src/"
         }
     },
