BAP-5316: Remember me token does not work. Fix tests

--- a/app/config/security_test.yml
+++ b/app/config/security_test.yml
@@ -13,5 +13,5 @@ security:
             http-basic: false
             organization-form-login: false
             logout: false
-            remember_me: false
+            organization-remember-me: false
             anonymous: true
