--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,20 @@
-/.settings
-/.buildpath
-/.project
-/.idea
-/node_modules
-/composer.phar
-composer.lock
-/build/logs/*
-/vendor
-/cov
-/web/bundles
-/web/css
-/web/js
-/web/uploads/users/*
-/web/media/cache
-/web/build.js
+/web/bundles/
+/web/css/
+/web/js/
+/web/uploads/
+/web/media/
+/app/bootstrap.php.cache
+/app/attachment/*
+/app/cache/*
 /app/config/parameters.yml
-/app/config/parameters_test.yml
-*~
-
+/app/logs/*
+!app/attachment/.gitkeep
+!app/cache/.gitkeep
+!app/logs/.gitkeep
+/app/karma.conf.js
+/app/phpunit.xml
 /app/SymfonyRequirements.php
+/build/
+/vendor/
+/bin/
+/composer.phar
