--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -2,9 +2,19 @@ imports:
     - { resource: parameters.yml }
     - { resource: security.yml }
 
+    - { resource: other/fos.yml }
+    - { resource: other/be_simple.yml }
+    - { resource: other/stof.yml }
+    - { resource: other/wsse.yml }
+    - { resource: other/genemu.yml }
+    - { resource: other/clank.yml }
+    - { resource: other/a2lix.yml }
+    - { resource: other/lexik.yml }
+    - { resource: other/oro.yml }
+
 framework:
     #esi:             ~
-    translator:      { fallback: en }
+    translator:      { fallback: "%locale%" }
     secret:          "%secret%"
     router:
         resource: "%kernel.root_dir%/config/routing.yml"
@@ -12,9 +22,12 @@ framework:
     form:            true
     csrf_protection: true
     validation:      { enable_annotations: true }
-    templating:      { engines: ['twig', 'php'] } #assets_version: SomeVersionScheme
-    default_locale:           "%locale%"
-    trusted_proxies:          ~
+    templating:
+        engines: ['twig', 'php']
+        #assets_version: SomeVersionScheme
+    default_locale:  "%locale%"
+    trusted_hosts:   ~
+    trusted_proxies: ~
     session:
         name:                 BAPID
         handler_id:           %session_handler%
@@ -24,13 +37,14 @@ framework:
     fragments:
         enabled:              true
         path:                 /_fragment # used for controller action in template
+    http_method_override: true
     serializer:
         enabled:              true
 
 # Twig Configuration
 twig:
-    debug:                    "%kernel.debug%"
-    strict_variables:         "%kernel.debug%"
+    debug:            "%kernel.debug%"
+    strict_variables: "%kernel.debug%"
     exception_controller:     "FOS\RestBundle\Controller\ExceptionController::showAction"
     globals:
         bap:
@@ -64,22 +78,7 @@ doctrine:
                 user:         "%database_user%"
                 password:     "%database_password%"
                 charset:      UTF8
-            report_source:
-                driver:       "%database_driver%"
-                host:         "%database_host%"
-                port:         "%database_port%"
-                dbname:       "%database_name%"
-                user:         "%database_user%"
-                password:     "%database_password%"
-                charset:      UTF8
-            report_target:
-                driver:       "%database_driver%"
-                host:         "%database_host%"
-                port:         "%database_port%"
-                dbname:       "%database_name%"
-                user:         "%database_user%"
-                password:     "%database_password%"
-                charset:      UTF8
+
     orm:
         auto_generate_proxy_classes: "%kernel.debug%"
         auto_mapping:         true
@@ -104,58 +103,23 @@ swiftmailer:
     password:                 "%mailer_password%"
     spool:                    { type: memory }
 
-fos_rest:
-    view:
-        failed_validation:    HTTP_BAD_REQUEST
-        default_engine:       php
-        formats:
-            json:             true
-            xml:              true
-    format_listener:
-        prefer_extension:     true
-    body_listener:
-        decoders:
-            json:             fos_rest.decoder.json
-            xml:              fos_rest.decoder.xml
-    routing_loader:
-        default_format:       json
-
-fos_js_routing:
-    routes_to_expose:         [oro_*]
-
-be_simple_soap:
-    cache:
-        type:                 disk
-        lifetime:             86400
-        limit:                5
-    services:
-        soap:
-            namespace:        urn:OroPlatform
-            binding:          rpc-literal
-            resource:         .
-            resource_type:    oro_soap
-
-stof_doctrine_extensions:
-    default_locale: en
-    translation_fallback: true
-    orm:
-        default:
-            translatable:     true
-            tree:             true
-
+# Global Services
 services:
     twig.extension.intl:
          class:               Twig_Extensions_Extension_Intl
          tags:
              - { name: twig.extension }
+
     doctrine.dbal.default.wrapped_connection:
         factory_service:      doctrine.dbal.default_connection
         factory_method:       getWrappedConnection
         class:                PDO
+
     doctrine.metadata.cache:
         parent: oro.cache.abstract
         calls:
             - [ setNamespace, [ "doctrine.metadata.cache" ] ]
+
     session.handler.pdo:
         class:                Symfony\Component\HttpFoundation\Session\Storage\Handler\PdoSessionHandler
         arguments:
@@ -163,61 +127,3 @@ services:
             -
               db_table:       oro_session
               db_id_col:      id
-
-escape_wsse_authentication:
-    authentication_provider_class: Oro\Bundle\UserBundle\Security\WsseAuthProvider
-    authentication_listener_class: Oro\Bundle\UserBundle\Security\WsseAuthListener
-
-genemu_form:
-    select2: ~
-    autocomplete: ~
-
-clank:
-    web_socket_server:
-        port:                 %websocket_port%                # The port the socket server will listen on
-        host:                 %websocket_host%                # (optional) The host ip to bind to
-    session_handler:          session.handler.pdo
-    periodic:
-        -
-            service:          "oro_wamp.db_ping"
-            time:             60000                           # the time in milliseconds between the "tick" function being called
-
-a2lix_translation_form:
-    locales: [en, fr]
-    templating: "OroUIBundle:Form:translatable.html.twig"
-
-lexik_maintenance:
-    authorized:
-        path:                 "maintenance|.*\.js"             # "maintenance" is only for demo purposes, remove in production!
-#        ips:                  ["127.0.0.1"]                   # Optional. Authorized ip addresses
-    driver:
-        class:                Lexik\Bundle\MaintenanceBundle\Drivers\FileDriver
-        options:
-            file_path:        %kernel.root_dir%/cache/maintenance_lock
-
-#
-# ORO Bundles config
-#
-oro_distribution:
-    entry_point: ~
-
-oro_require_js:
-    build_path:               "js/oro.min.js"
-    building_timeout:         3600
-    build:
-        preserveLicenseComments: true
-
-oro_help:
-    defaults:
-        server: http://help.orocrm.com/
-        prefix: Third_Party
-    vendors:
-        Oro:
-            prefix: ~
-            alias: Platform
-    routes:
-        oro_default:
-            uri: Platform/OroDashboardBundle
-
-oro_theme:
-    active_theme: oro
