CRM-2243: Upgrade jQuery and jQuery-UI to latest versions

--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,9 @@
     "require": {
         "oro/platform": "1.x-dev"
     },
+    "config": {
+        "component-dir": "web/bundles/components"
+    },
     "scripts": {
         "post-install-cmd": [
             "Incenteev\\ParameterHandler\\ScriptHandler::buildParameters",
