--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,9 @@
     "require": {
         "oro/platform": "1.x-dev"
     },
+    "require-dev": {
+        "sensio/generator-bundle": "2.5.3"
+    },
     "config": {
         "component-dir": "web/bundles/components"
     },
