--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -12,7 +12,7 @@
             <directory suffix="Test.php">vendor/oro/platform/src/Oro/Bundle/*Bundle/Tests/Unit</directory>
         </testsuite>
         <testsuite name="Components Unit Tests">
-            <directory suffix="Test.php">vendor/o   ro/platform/src/Oro/Component/*/Tests/Unit</directory>
+            <directory suffix="Test.php">vendor/oro/platform/src/Oro/Component/*/Tests/Unit</directory>
         </testsuite>
     </testsuites>
 </phpunit>
