--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -8,11 +8,13 @@
          bootstrap="app/autoload.php"
 >
     <testsuites>
-        <testsuite name="Bundles Unit Tests">
+        <testsuite name="unit">
             <directory suffix="Test.php">vendor/oro/platform/src/*/Bundle/*Bundle/Tests/Unit</directory>
-        </testsuite>
-        <testsuite name="Components Unit Tests">
             <directory suffix="Test.php">vendor/oro/platform/src/*/Component/*/Tests/Unit</directory>
+        </testsuite>
+        <testsuite name="functional">
+            <directory suffix="Test.php">vendor/oro/platform/src/*/Bundle/*Bundle/Tests/Functional</directory>
+            <directory suffix="Test.php">vendor/oro/platform/src/*/Component/*/Tests/Functional</directory>
         </testsuite>
     </testsuites>
 </phpunit>
