Add missing packages to composer.json of applications. Fix phpstorm:init-application command

--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         }
     ],
     "require": {
-        "oro/platform": "self.version"
+        "oro/platform": "self.version",
+        "oro/platform-serialised-fields" : "self.version"
     },
     "require-dev": {
         "sensio/generator-bundle": "2.5.3",
