--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         }
     ],
     "require": {
-        "oro/platform": "1.9.0"
+        "oro/platform": "1.9.*"
     },
     "require-dev": {
         "sensio/generator-bundle": "2.5.3"
