--- a/composer.json
+++ b/composer.json
@@ -10,12 +10,16 @@
     },
     "repositories": [
         {
+            "type": "path",
+            "url": "../../package/*"
+        },
+        {
             "type": "composer",
             "url": "https://packagist.orocrm.com"
         }
     ],
     "require": {
-        "oro/platform": "1.x-dev"
+        "oro/platform": "self.version"
     },
     "require-dev": {
         "sensio/generator-bundle": "2.5.3"
