BAP-10852: Resolve issues with application repositories appeared after merge - add dev.json

--- a/composer.json
+++ b/composer.json
@@ -14,17 +14,13 @@
             "url": "https://github.com/orocrm/TranslationFormBundle.git"
         },
         {
-            "type": "path",
-            "url": "../../package/*"
-        },
-        {
             "type": "composer",
             "url": "https://packagist.orocrm.com"
         }
     ],
     "require": {
-        "oro/platform": "self.version",
-        "oro/platform-serialised-fields" : "self.version"
+        "oro/platform": "1.x-dev",
+        "oro/platform-serialised-fields" : "1.x-dev"
     },
     "require-dev": {
         "sensio/generator-bundle": "2.5.3",
