--- a/composer.json
+++ b/composer.json
@@ -19,8 +19,7 @@
         }
     ],
     "require": {
-        "oro/platform": "1.10.x-dev",
-        "oro/platform-serialised-fields" : "1.10.x-dev"
+        "oro/platform": "1.10.*"
     },
     "require-dev": {
         "sensio/generator-bundle": "2.5.3",
