BAP-11233: Automated manage dashboards feature

--- a/behat.yml.dist
+++ b/behat.yml.dist
@@ -9,6 +9,7 @@ default: &default
             application_suites:
                 - OroUserBundle
                 - OroNavigationBundle
+                - OroDashboardBundle
 
 selenium2:
     <<: *default
