--- a/behat.yml.dist
+++ b/behat.yml.dist
@@ -5,11 +5,13 @@ default: &default
     extensions:
         Behat\MinkExtension:
             base_url: 'http://dev-platform.local/'
+        Behat\Symfony2Extension: ~
         Oro\Bundle\TestFrameworkBundle\Behat\ServiceContainer\OroTestFrameworkExtension:
             application_suites:
                 - OroUserBundle
                 - OroNavigationBundle
                 - OroDashboardBundle
+                - OroSearchBundle
 
 selenium2:
     <<: *default
