BAP-11232: Fixed behat applications configs

--- a/behat.yml.dist
+++ b/behat.yml.dist
@@ -12,6 +12,8 @@ default: &default
                 - OroNavigationBundle
                 - OroDashboardBundle
                 - OroSearchBundle
+                - OroHelpBundle
+                - OroEmailBundle
 
 selenium2:
     <<: *default
