CRM-6425: Merge master into story branch - Added calendar package to platform application's dev.json, dev.lock and composer.json

--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
     },
     "require": {
         "oro/platform": "1.x-dev",
-        "oro/platform-serialised-fields" : "1.x-dev"
+        "oro/platform-serialised-fields": "1.x-dev",
+        "oro/calendar-bundle": "1.x-dev"
     },
     "require-dev": {
         "sensio/generator-bundle": "2.5.3",
