--- a/behat.yml.dist
+++ b/behat.yml.dist
@@ -17,3 +17,8 @@ default: &default
 
 selenium2:
     <<: *default
+#    Uncomment this in your behat.yml for run tests with Chrome browser
+#    extensions:
+#        Behat\MinkExtension:
+#            browser_name: chrome
+#            base_url: 'http://dev-platform.local/'
