--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -14,6 +14,9 @@
     <groups>
         <exclude>
             <group>soap</group>
+            <group>segfault</group>
+            <group>dist</group>
+            <group>search</group>
         </exclude>
     </groups>
     <testsuites>
