--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         }
     },
     "require": {
+        "robloach/component-installer" : "0.2.*",
         "oro/platform": "1.x-dev",
         "oro/platform-serialised-fields": "1.x-dev"
     },
