--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -22,10 +22,12 @@
         <testsuite name="unit">
             <directory suffix="Test.php">vendor/oro/platform*/src/*/Bundle/*Bundle/Tests/Unit</directory>
             <directory suffix="Test.php">vendor/oro/platform*/src/*/Component/*/Tests/Unit</directory>
+            <directory suffix="Test.php">vendor/oro/calendar-bundle/Oro/Bundle/*Bundle/Tests/Unit</directory>
         </testsuite>
         <testsuite name="functional">
             <directory suffix="Test.php">vendor/oro/platform*/src/*/Bundle/*Bundle/Tests/Functional</directory>
             <directory suffix="Test.php">vendor/oro/platform*/src/*/Component/*/Tests/Functional</directory>
+            <directory suffix="Test.php">vendor/oro/calendar-bundle/Oro/Bundle/*Bundle/Tests/Functional</directory>
         </testsuite>
         <testsuite name="functional-1-of-4">
             <directory suffix="Test.php">vendor/oro/platform/src/*/Bundle/A*Bundle/Tests/Functional</directory>
@@ -67,6 +69,7 @@
         <testsuite name="selenium">
             <directory suffix="Test.php">vendor/oro/platform*/src/*/Bundle/*Bundle/Tests/Selenium</directory>
             <directory suffix="Test.php">vendor/oro/platform*/src/*/Component/*/Tests/Selenium</directory>
+            <directory suffix="Test.php">vendor/oro/calendar-bundle/Oro/Bundle/*Bundle/Tests/Selenium</directory>
         </testsuite>
     </testsuites>
 
