--- a/app/config/config_test.yml
+++ b/app/config/config_test.yml
@@ -56,3 +56,6 @@ oro_user:
             value: false
         password_special_chars:
             value: false
+
+twig:
+    strict_variables: true
