--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ behat.yml
 /web/uploads/users/*
 /web/media/cache
 /web/build.js
+/web/tracking.php
 /app/config/parameters.yml
 /app/config/parameters_test.yml
 behat.yml
