--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,8 @@
         }
     },
     "require": {
-        "oro/platform": "1.x-dev",
-        "oro/platform-serialised-fields": "1.x-dev"
+        "oro/platform": "2.0.0-rc.1",
+        "oro/platform-serialised-fields": "2.0.0-rc.1"
     },
     "require-dev": {
         "sensio/generator-bundle": "3.1.2",
