BB-7555: Remove application suites

--- a/behat.yml.dist
+++ b/behat.yml.dist
@@ -9,14 +9,7 @@ default: &default
         Behat\MinkExtension:
             base_url: 'http://dev-platform.local/'
         Behat\Symfony2Extension: ~
-        Oro\Bundle\TestFrameworkBundle\Behat\ServiceContainer\OroTestFrameworkExtension:
-            application_suites:
-                - OroUserBundle
-                - OroNavigationBundle
-                - OroDashboardBundle
-                - OroSearchBundle
-                - OroHelpBundle
-                - OroEmailBundle
+        Oro\Bundle\TestFrameworkBundle\Behat\ServiceContainer\OroTestFrameworkExtension: ~
 
 selenium2:
     <<: *default
