--- a/app/config/config_dev.yml
+++ b/app/config/config_dev.yml
@@ -15,12 +15,12 @@ monolog:
             type:  stream
             path:  "%kernel.logs_dir%/%kernel.environment%.log"
             level: debug
-        firephp:
-            type:  firephp
-            level: info
-        chromephp:
-            type:  chromephp
-            level: info
+#        firephp:
+#            type:  firephp
+#            level: info
+#        chromephp:
+#            type:  chromephp
+#            level: info
 
 oro_assetic:
     css_debug:      ~
