--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,8 @@
         }
     },
     "require": {
-        "oro/platform": "1.x-dev",
-        "oro/platform-serialised-fields": "1.x-dev"
+        "oro/platform": "2.1.*",
+        "oro/platform-serialised-fields": "2.1.*"
     },
     "require-dev": {
         "sensio/generator-bundle": "3.1.2",
