--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -96,10 +96,12 @@
                 <string>app/logs</string>
             </arguments>
         </listener>
+        <listener class="Symfony\Bridge\PhpUnit\SymfonyTestsListener"/>
     </listeners>
 
     <php>
         <env name="SYMFONY_DEBUG" value="0"/>
+        <env name="SYMFONY_DEPRECATIONS_HELPER" value="weak" />
         <ini name="error_reporting" value="-1"/>
         <server name="KERNEL_DIR" value="app/"/>
         <const name="PHPUNIT_LOAD_LIMIT" value="1.2"/>
