BAP-14428: Move all cache folder to gitignore (#9210)
- added .gitkeep files to app/cache and app/logs were it necessary
- removed .gitignore files to app/cache and app/logs were it necessary
- changed .gitignore in root of each application acording provided changes

--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,10 @@ behat.yml
 /web/build.js
 /app/config/parameters.yml
 /app/config/parameters_test.yml
+/app/cache/*
+/app/logs/*
+!app/cache/.gitkeep
+!app/logs/.gitkeep
 behat.yml
 *~
 bin
