--- a/behat.yml.dist
+++ b/behat.yml.dist
@@ -10,6 +10,9 @@ default: &default
             base_url: 'http://dev-platform.local/'
         Behat\Symfony2Extension: ~
         Oro\Bundle\TestFrameworkBundle\Behat\ServiceContainer\OroTestFrameworkExtension:
+            shared_contexts:
+                - Oro\Bundle\FilterBundle\Tests\Behat\Context\FilterContext
+                - Oro\Bundle\QueryDesignerBundle\Tests\Behat\Context\QueryDesignerContext
             application_suites:
                 - OroUserBundle
                 - OroNavigationBundle
