--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,8 @@
         }
     },
     "require": {
-        "oro/platform": "2.x-dev",
-        "oro/platform-serialised-fields": "2.x-dev"
+        "oro/platform": "2.2.*",
+        "oro/platform-serialised-fields": "2.2.*"
     },
     "require-dev": {
         "sensio/generator-bundle": "3.1.2",
