BAP-14558: Manage Bower Assets With Composer (#11259)
* [WIP] BAP-14558: Manage Bower Assets With Composer
- moved from fxp-composer to asset-packagist

--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,10 @@
         "composer": {
             "type": "composer",
             "url": "https://packagist.orocrm.com"
+        },
+        "asset-packagist": {
+          "type": "composer",
+          "url": "https://asset-packagist.orocrm.com"
         }
     },
     "require": {
@@ -36,17 +40,10 @@
     },
     "config": {
         "component-dir": "web/bundles/components",
-        "bin-dir": "bin",
-        "fxp-asset": {
-            "asset-installer-paths": {
-                "npm-asset-library": "web/bundles/npmassets",
-                "bower-asset-library": "web/bundles/bowerassets"
-            }
-        }
+        "bin-dir": "bin"
     },
     "scripts": {
         "post-install-cmd": [
-            "Oro\\Bundle\\InstallerBundle\\Composer\\ScriptHandler::checkComposerPlugin",
             "Incenteev\\ParameterHandler\\ScriptHandler::buildParameters",
             "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::buildBootstrap",
             "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installRequirementsFile",
@@ -55,7 +52,6 @@
             "Oro\\Bundle\\InstallerBundle\\Composer\\ScriptHandler::setAssetsVersion"
         ],
         "post-update-cmd": [
-            "Oro\\Bundle\\InstallerBundle\\Composer\\ScriptHandler::checkComposerPlugin",
             "Incenteev\\ParameterHandler\\ScriptHandler::buildParameters",
             "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::buildBootstrap",
             "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installRequirementsFile",
@@ -71,10 +67,6 @@
         "symfony-web-dir": "web",
         "incenteev-parameters": {
             "file": "app/config/parameters.yml"
-        },
-        "asset-installer-paths": {
-            "npm-asset-library": "web/bundles/npmassets",
-            "bower-asset-library": "web/bundles/bowerassets"
         }
     }
 }
