OPI-158: Fixed travis build, move EE features to EE bundle

--- a/behat.yml.dist
+++ b/behat.yml.dist
@@ -10,3 +10,6 @@ default: &default
             base_url: 'http://dev-platform.local/'
         Behat\Symfony2Extension: ~
         Oro\Bundle\TestFrameworkBundle\Behat\ServiceContainer\OroTestFrameworkExtension: ~
+
+chromedriver:
+    <<: *default
