--- a/composer.json
+++ b/composer.json
@@ -18,8 +18,8 @@
         }
     },
     "require": {
-        "oro/platform": "2.x-dev",
-        "oro/platform-serialised-fields": "2.x-dev"
+        "oro/platform": "2.4.*",
+        "oro/platform-serialised-fields": "2.4.*"
     },
     "require-dev": {
         "sensio/generator-bundle": "3.1.2",
