--- a/composer.json
+++ b/composer.json
@@ -41,7 +41,10 @@
     },
     "config": {
         "component-dir": "web/bundles/components",
-        "bin-dir": "bin"
+        "bin-dir": "bin",
+        "fxp-asset": {
+            "enabled": false
+        }
     },
     "scripts": {
         "post-install-cmd": [
