--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -5,6 +5,7 @@ parameters:
     database_name:          bap_standard
     database_user:          root
     database_password:      ~
+    database_driver_options: []
 
     mailer_transport:       mail
     mailer_host:            127.0.0.1
