--- a/app/config/parameters_test.yml.dist
+++ b/app/config/parameters_test.yml.dist
@@ -5,6 +5,7 @@ parameters:
     database_name:          bap_dev_test
     database_user:          root
     database_password:      root
+    database_driver_options: []
 
     mailer_transport:       smtp
     mailer_host:            127.0.0.1
