BAP-16198: Passwords Sent Unprotected Via Email (#16036)
 - added `send_password_in_invitation_email` options to System Configuration
 - moved `PasswordGenerate` js component to UserBundle
 - updated user form template, form type and handler
 - added unit, functional and behat tests

--- a/app/config/config_test.yml
+++ b/app/config/config_test.yml
@@ -33,6 +33,7 @@ services:
             - '@oro_message_queue.test.message_collector.inner'
 
 swiftmailer:
+    logging: true
     disable_delivery: true
 
 oro_require_js:
