BAP-16841: "SystemCalendarEventControllerTest" functional test failed (#17586)
 - fixed failed tests scenario (count of created CalendarEvents is 3)
 - updated .gitignore files

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ behat.yml
 /web/js
 /web/uploads/users/*
 /web/media/cache
+/web/media/js
 /web/build.js
 /app/config/parameters.yml
 /app/config/parameters_test.yml
