--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
     "license": "MIT",
     "autoload": {
         "psr-4": {"": "src/"},
+        "files": ["app/AppKernel.php"],
         "exclude-from-classmap": ["**/Tests/"]
     },
     "repositories": {
@@ -72,6 +73,9 @@
     "extra": {
         "symfony-app-dir": "app",
         "symfony-web-dir": "web",
+        "symfony-var-dir": "var",
+        "symfony-bin-dir": "bin",
+        "symfony-tests-dir": "tests",
         "incenteev-parameters": {
             "file": "app/config/parameters.yml"
         }
