BB-14403: Release preparation activities - Split Monolithic repositor… (#18241)
- updated dependencies versions in composer.json, regenerated dev.lock files
- updated config for split

--- a/composer.json
+++ b/composer.json
@@ -22,8 +22,8 @@
         }
     },
     "require": {
-        "oro/platform": "2.x-dev",
-        "oro/platform-serialised-fields": "2.x-dev"
+        "oro/platform": "3.0.*",
+        "oro/platform-serialised-fields": "3.0.*"
     },
     "require-dev": {
         "sensio/generator-bundle": "3.1.2",
