--- a/composer.json
+++ b/composer.json
@@ -22,8 +22,8 @@
         }
     },
     "require": {
-        "oro/platform": "3.2-dev",
-        "oro/platform-serialised-fields": "3.2-dev"
+        "oro/platform": "3.2.x-dev",
+        "oro/platform-serialised-fields": "3.2.x-dev"
     },
     "require-dev": {
         "sensio/generator-bundle": "3.1.*",
