--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
     },
     "require": {
         "oro/platform": "3.1.*",
-        "oro/platform-serialised-fields": "3.1.*"
+        "oro/platform-serialised-fields": "3.1.*",
+        "oro/oauth2-server": "3.1.*"
     },
     "require-dev": {
         "sensio/generator-bundle": "3.1.*",
