--- a/config/parameters.yml.dist
+++ b/config/parameters.yml.dist
@@ -7,7 +7,7 @@ parameters:
     database_password:      ~
     database_driver_options: []
 
-    mailer_transport:       mail
+    mailer_transport:       sendmail
     mailer_host:            127.0.0.1
     mailer_port:            ~
     mailer_encryption:      ~
