--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,7 @@ behat.yml
 /var/import_export/*
 !var/import_export/.gitkeep
 !var/oro-check.php
+!var/SymfonyRequirements.php
 !var/OroRequirements.php
 /build/logs/*
 /vendor
