--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,8 @@ behat.yml
 /public/bundles
 /public/css
 /public/js
+/public/build
+/public/layout-build
 /public/uploads/users/*
 /public/media/cache
 /public/media/js
