--- a/composer.json
+++ b/composer.json
@@ -5,10 +5,7 @@
     "license": "MIT",
     "autoload": {
         "psr-4": {"": "src/"},
-        "exclude-from-classmap": ["**/Tests/"],
-        "files": [
-            "vendor/oro/platform/src/Oro/Bundle/LocaleBundle/Intl/Locale.php"
-        ]
+        "exclude-from-classmap": ["**/Tests/"]
     },
     "repositories": {
         "composer": {
