--- a/config/parameters_test.yml.dist
+++ b/config/parameters_test.yml.dist
@@ -34,3 +34,5 @@ parameters:
     assets_version_strategy: time_hash
     message_queue_transport: 'null'
     message_queue_transport_config: {}
+
+    deployment_type: ~
