--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         }
     },
     "require": {
+        "php": "~7.3.13",
         "oro/platform": "4.1.*",
         "oro/platform-serialised-fields": "4.1.*",
         "oro/oauth2-server": "4.1.*"
