--- a/composer.json
+++ b/composer.json
@@ -59,7 +59,7 @@
         "post-update-cmd": [
             "@build-parameters",
             "@set-permissions",
-            "@install-assets",
+            "@update-assets",
             "@set-assets-version"
         ],
         "build-parameters": [
@@ -70,6 +70,9 @@
         ],
         "install-assets": [
             "Oro\\Bundle\\InstallerBundle\\Composer\\ScriptHandler::installAssets"
+        ],
+        "update-assets": [
+            "Oro\\Bundle\\InstallerBundle\\Composer\\ScriptHandler::updateAssets"
         ],
         "set-assets-version": [
             "Oro\\Bundle\\InstallerBundle\\Composer\\ScriptHandler::setAssetsVersion"
