BAP-19658: Application must only override `dependencies` section in package.json, all other definitions must stay as is. (#27065)
 - updated and unified .gitignore files
 - updated script handler
 - added package.json to VCS
 - updated documentation composer-js-dependencies.rst

Co-authored-by: Kateryna Isakova <kisakova@users.noreply.github.com>

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 /.idea
 /node_modules
 /composer.phar
+composer.lock
 behat.yml
 /var/*
 !var/cache/
@@ -35,13 +36,11 @@ behat.yml
 /public/build.js
 /config/parameters.yml
 /config/parameters_test.yml
-behat.yml
+phpunit.xml
 *~
 bin/*
 !bin/console
 !bin/dist
-phpunit.xml
 /public/uploads/behat
 /.web-server-pid
 /.vagrant
-/package.json
