--- a/.gitignore
+++ b/.gitignore
@@ -13,12 +13,9 @@ behat.yml
 !var/logs/
 /var/logs/*
 !var/logs/.gitkeep
-!var/attachment/
-/var/attachment/*
-!var/attachment/.gitkeep
-!var/import_export/
-/var/import_export/*
-!var/import_export/.gitkeep
+!var/data/
+/var/data/*
+!var/data/.gitkeep
 !var/oro-check.php
 !var/SymfonyRequirements.php
 !var/OroRequirements.php
@@ -26,11 +23,11 @@ behat.yml
 /vendor
 /cov
 /public/bundles
-/public/css
-/public/js
+!public/js/
+/public/js/*
+!public/js/.gitkeep
 /public/build
 /public/layout-build
-/public/uploads/users/*
 /public/media/cache
 /public/media/js
 /public/build.js
@@ -41,7 +38,6 @@ phpunit.xml
 bin/*
 !bin/console
 !bin/dist
-/public/uploads/behat
 /.web-server-pid
 /.vagrant
 /.php-version
