BAP-20700: Upgrade behat/symfony2-extension to comply with Symfony 5 (#30312)
- using friends-of-behat/symfony-extension instead of behat/symfony2-extension
- made contexts as services
- included parameters.yml for behat wiring tests
- made using FQCN for contexts
- updated dev.locks

| Dev Changes                        | From  | To      | Compare |
|------------------------------------|-------|---------|---------|
| behat/symfony2-extension           | 2.1.5 | REMOVED |         |
| composer/composer  | 2.1.4 | 2.1.5 | [...](https://github.com/composer/composer/compare/2.1.4...2.1.5) |
| phar-io/manifest | 2.0.1 | 2.0.3 | [...](https://github.com/phar-io/manifest/compare/2.0.1...2.0.3) |
| phpmd/phpmd                        | 2.10.1 | 2.10.2  | [...](https://github.com/phpmd/phpmd/compare/2.10.1...2.10.2) |
| friends-of-behat/symfony-extension | NEW   | v2.2.0  |         |

--- a/behat.yml.dist
+++ b/behat.yml.dist
@@ -8,7 +8,7 @@ default: &default
     extensions:
         Behat\MinkExtension:
             base_url: 'http://dev-platform.local/'
-        Behat\Symfony2Extension: ~
+        FriendsOfBehat\SymfonyExtension: ~
         Oro\Bundle\TestFrameworkBundle\Behat\ServiceContainer\OroTestFrameworkExtension: ~
 
 chromedriver:
