BAP-20933: public/bundles folder is ignored during project creation by composer (#31642)

--- a/.gitignore
+++ b/.gitignore
@@ -20,7 +20,9 @@ behat.yml
 /build/logs/*
 /vendor
 /cov
-/public/bundles
+!public/bundles/
+/public/bundles/*
+!public/bundles/.gitkeep
 !public/js/
 /public/js/*
 !public/js/.gitkeep
