--- a/composer.json
+++ b/composer.json
@@ -20,9 +20,9 @@
     },
     "require": {
         "php": "~8.1.0",
-        "oro/platform": "5.0.*",
-        "oro/platform-serialised-fields": "5.0.*",
-        "oro/oauth2-server": "5.0.*"
+        "oro/platform": "5.1.*",
+        "oro/platform-serialised-fields": "5.1.*",
+        "oro/oauth2-server": "5.1.*"
     },
     "require-dev": {
         "behat/behat": "~3.10.0",
@@ -36,7 +36,7 @@
         "nelmio/alice": "~3.9.0",
         "oro/twig-inspector": "1.0.*",
         "phpmd/phpmd": "~2.11.1",
-        "phpunit/phpunit": "~9.5.1",
+        "phpunit/phpunit": "9.5.13",
         "sebastian/phpcpd": "6.0.*",
         "squizlabs/php_codesniffer": "3.5.*",
         "symfony/browser-kit": "~5.4.0",
