BAP-21617: Composer install must build JS and CSS assets (#33590)
- Added "keep-outdated": true to incentive-parameters config in composer.json in order to allow using composer set-parameters command with the new approach of installing assets
- Removed a requirement to write to config/parameters.yml as this file has been read-only since 5.0 during installation
- Moved composer install in behat test to the later stage
- Increase timeout for behat wiring build
- Fixed in .sh scripts

Co-authored-by: Andrey Yatsenko <ayatsenko@oroinc.com>
Co-authored-by: Viacheslav Dubrovskyi <vdubrovskyi@oroinc.com>

--- a/composer.json
+++ b/composer.json
@@ -54,6 +54,9 @@
         "bin-dir": "bin",
         "fxp-asset": {
             "enabled": false
+        },
+        "allow-plugins": {
+            "symfony/flex": true
         }
     },
     "scripts": {
@@ -61,13 +64,15 @@
             "@build-parameters",
             "@set-permissions",
             "@install-assets",
-            "@set-assets-version"
+            "@set-assets-version",
+            "@auto-scripts"
         ],
         "post-update-cmd": [
             "@build-parameters",
             "@set-permissions",
             "@update-assets",
-            "@set-assets-version"
+            "@set-assets-version",
+            "@auto-scripts"
         ],
         "build-parameters": [
             "Incenteev\\ParameterHandler\\ScriptHandler::buildParameters"
@@ -86,7 +91,11 @@
         ],
         "set-parameters": [
             "Oro\\Bundle\\InstallerBundle\\Composer\\ParametersHandler::set"
-        ]
+        ],
+        "auto-scripts": {
+            "oro:assets:install --env=prod": "symfony-cmd",
+            "cache:clear --env=prod": "symfony-cmd"
+        }
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
@@ -99,7 +108,8 @@
         "symfony-bin-dir": "bin",
         "symfony-tests-dir": "tests",
         "incenteev-parameters": {
-            "file": "config/parameters.yml"
+            "file": "config/parameters.yml",
+            "keep-outdated": true
         }
     }
 }
