--- a/behat.yml.dist
+++ b/behat.yml.dist
@@ -8,7 +8,11 @@ default: &default
     extensions:
         Behat\MinkExtension:
             base_url: 'http://dev-platform.local/'
-        FriendsOfBehat\SymfonyExtension: ~
+        FriendsOfBehat\SymfonyExtension:
+            kernel:
+              environment: 'prod'
+              debug: false
+              class: AppKernel
         Oro\Bundle\TestFrameworkBundle\Behat\ServiceContainer\OroTestFrameworkExtension: ~
 
 chromedriver:
