--- a/composer.json
+++ b/composer.json
@@ -56,6 +56,8 @@
             "enabled": false
         },
         "allow-plugins": {
+            "composer/package-versions-deprecated": true,
+            "symfony/runtime": true,
             "symfony/flex": true
         }
     },
@@ -89,11 +91,8 @@
         "set-assets-version": [
             "Oro\\Bundle\\InstallerBundle\\Composer\\ScriptHandler::setAssetsVersion"
         ],
-        "set-parameters": [
-            "Oro\\Bundle\\InstallerBundle\\Composer\\ParametersHandler::set"
-        ],
         "auto-scripts": {
-            "oro:assets:install --env=prod": "symfony-cmd",
+            "oro:assets:install": "symfony-cmd",
             "cache:clear --env=prod": "symfony-cmd"
         }
     },
@@ -102,6 +101,12 @@
     "extra": {
         "symfony": {
             "require": "~5.4.0"
+        },
+        "runtime": {
+            "dotenv_path": ".env-app",
+            "env_var_name": "ORO_ENV",
+            "debug_var_name": "ORO_DEBUG",
+            "prod_envs": ["prod", "behat_test"]
         },
         "symfony-web-dir": "public",
         "symfony-var-dir": "var",
