--- a/composer.json
+++ b/composer.json
@@ -54,6 +54,9 @@
         "bin-dir": "bin",
         "fxp-asset": {
             "enabled": false
+        },
+        "allow-plugins": {
+            "php-http/discovery": false
         }
     },
     "scripts": {
