--- a/composer.json
+++ b/composer.json
@@ -91,8 +91,7 @@
             "Oro\\Bundle\\InstallerBundle\\Composer\\ParametersHandler::set"
         ],
         "auto-scripts": {
-            "oro:assets:install": "symfony-cmd",
-            "cache:clear --env=prod": "symfony-cmd"
+            "oro:assets:install": "symfony-cmd"
         }
     },
     "minimum-stability": "dev",
