--- a/config/config.yml
+++ b/config/config.yml
@@ -19,6 +19,7 @@ parameters:
     liip_imagine.jpegoptim.binary: '%env(ORO_JPEGOPTIM_BINARY)%'
     liip_imagine.pngquant.binary: '%env(ORO_PNGQUANT_BINARY)%'
     tracking_data_folder: '%env(ORO_TRACKING_DATA_FOLDER)%'
+    maintenance_lock_file_path: '%env(resolve:ORO_MAINTENANCE_LOCK_FILE_PATH)%'
 
     env(ORO_SECRET): ThisTokenIsNotSoSecretChangeIt
     env(ORO_DB_URL): 'postgresql://root@127.0.0.1/bap_standard'
@@ -38,6 +39,7 @@ parameters:
     env(ORO_REDIS_CACHE_DSN): '%env(ORO_REDIS_URL)%/1'
     env(ORO_REDIS_DOCTRINE_DSN): '%env(ORO_REDIS_URL)%/2'
     env(ORO_TRACKING_DATA_FOLDER): null
+    env(ORO_MAINTENANCE_LOCK_FILE_PATH): '%kernel.project_dir%/var/cache/maintenance_lock'
 
 framework:
     #esi:             ~
@@ -104,7 +106,7 @@ oro_maintenance:
 #        ips:                  ["127.0.0.1"]                   # Optional. Authorized ip addresses
     driver:
         options:
-            file_path:        '%kernel.project_dir%/var/cache/maintenance_lock'
+            file_path:        '%maintenance_lock_file_path%'
 
 #
 # ORO Bundles config
