--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,9 @@ composer.lock
 !var/cache/
 /var/cache/*
 !var/cache/.gitkeep
+!var/sessions/
+/var/sessions/*
+!var/sessions/.gitkeep
 !var/logs/
 /var/logs/*
 !var/logs/.gitkeep
