BAP-22239: Move maintenance lock out of cache folder (#36411)
Co-authored-by: Viacheslav Dubrovskyi <vdubrovskyi@oroinc.com>

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,9 @@ composer.lock
 !var/logs/
 /var/logs/*
 !var/logs/.gitkeep
+!var/maintenance/
+/var/maintenance/*
+!var/maintenance/.gitkeep
 !var/data/
 /var/data/*
 !var/data/.gitkeep
