--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,12 @@
     "description": "Oro Platform Empty Application",
     "homepage": "https://github.com/oroinc/platform-application.git",
     "license": "MIT",
+    "authors": [
+        {
+            "name": "Oro, Inc",
+            "homepage": "https://oroinc.com/"
+        }
+    ],
     "autoload": {
         "psr-4": {"": "src/"},
         "classmap": [
@@ -15,7 +21,7 @@
     "repositories": {
         "composer": {
             "type": "composer",
-            "url": "https://packagist.orocrm.com"
+            "url": "https://packagist.oroinc.com"
         }
     },
     "require": {
