--- a/.gitignore
+++ b/.gitignore
@@ -34,8 +34,8 @@ composer.lock
 !public/js/.gitkeep
 /public/build
 /public/layout-build
-/public/media/cache
-/public/media/js
+/public/media
+!public/media/.gitkeep
 /public/build.js
 /config/parameters.yml
 /config/.env
